--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <link rel="stylesheet" href="css/main.css">
       <link rel="stylesheet" href="css/style-default.css">
       <script src="js/modernizr-2.7.1.min.js"></script> 
+      <script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/25334750.js"></script>
    </head>
    <body id="menu" class="body-page">
       <div class="page-loader" id="page-loader">
