--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                   <div class="row">
                      <div class="col-sm-12 col-lg-6 text-left">
                         <div class="title-desc">
-                           <h1 class="display-4 display-title home-title anim-1">Hi,<br></h1>
+                           <h1 class="display-4 display-title home-title anim-1">Hi test,<br></h1>
                            <p class="anim-2 home-desc">We are a team of qualified Software developers, aimed at creating unique and powerful tools for your Business & Everyday life.</p>
                         </div>
                         <div class="btns-action anim-3"> <a class="btn btn-underline btn-primary" href="#about"> <span class="text">About Us</span> </a> </div>
